--- a/JTB_ms/JTB_ms.Rmd
+++ b/JTB_ms/JTB_ms.Rmd
@@ -1,5 +1,5 @@
 ---
-title: A simplified dynamic bioenergetic model for coral bleaching
+title: A simplified dynamic bioenergetic model for coral-algal symbiosis and coral bleaching
 author:
   - name: Ross Cunning
     email: ross.cunning@gmail.com
@@ -152,15 +152,15 @@ Due to the inherent inefficiency of the parallel complementary SU formulation, t
 
 ## *Symbiodinium* fluxes
 
-The symbiont produces fixed carbon through photosynthesis, a process represented here by a single SU with two substrates: light (photons) and inorganic carbon (CO~2~). The amount of light absorbed by the symbiont depends on the scalar irradiance at the site of light absorption, which is modified substantially relative to external downwelling irradiance owing to multiple scattering by the coral skeleton and self-shading by surrounding symbionts [@Enriquez:2005p142; @Marcelino:2013hz]. We used data from @Marcelino:2013hz to empirically derive an "amplification factor" $A$ (the ratio of internal scalar irradiance to external downwelling irradiance) as a function of symbiont density (expressed as symbiont to host biomass ratio), which is specified as:
+The symbiont produces fixed carbon through photosynthesis, a process represented here by a single SU with two substrates: light (photons) and inorganic carbon (CO~2~). The amount of light absorbed by the symbiont depends on the scalar irradiance at the site of light absorption, which is modified substantially relative to external downwelling irradiance owing to multiple scattering by the coral skeleton and self-shading by surrounding symbionts [@Enriquez:2005p142; @Marcelino:2013hz]. We used data from @Marcelino:2013hz to empirically derive an amplification factor, $A$, indicating the ratio of internal scalar irradiance to external downwelling irradiance as a function of symbiont density (S:H biomass), which is specified as:
 
 \begin{equation} A = 1.26 + 1.39 \cdot \exp(-6.48 \cdot {S \over H}) \end{equation}
 
-This amplification factor is then multiplied by the external downwelling irradiance $L$ and the effective light-absorbing surface area of symbiont biomass $\bar{a}^*$ to specify the total amount of light absorbed:
+This amplification factor is then multiplied by the external downwelling irradiance $L$ and the effective light-absorbing surface area of symbiont biomass $\bar{a}^*$ to specify the total light absorption:
 
 \begin{equation} j_L =  A \cdot L \cdot \bar{a}^* \end{equation}
 
-We then specify the input of CO~2~ to photosynthesis as $j_{CO_2}$, which is mediated by the host. This encompasses potentially diverse mechanisms by which the host may enhance CO~2~ availability for photosynthesis (i.e., carbon-concentrating mechanisms (CCMs)), including active transport of bicarbonate, carbonic anhydrase-catalyzed conversion of bicarbonate to CO~2~ to promote diffusion toward the symbiont [@Tansik:2015cm], and acidification of the symbiosome to increase localized CO~2~ concentrations around the symbiont [@Barott:2014gx]. Since these mechanisms require energetic input by the host, the magnitude of CO~2~ delivery is set proportional to $j_{eC}$, the amount of excess carbon from the host biomass SU, assuming that some of this carbon is respired to energize these CCMs. This formulation means that the symbiont indirectly ensures its own CO~2~ supply by providing the host with fixed carbon [@Wooldridge:2013tj], which establishes a positive feedback in the model that proves to be essential in simulating the phenomenon of coral bleaching. The parameter $k_{CO_2}$ is included to scale the efficacy of host CCMs, i.e., how many moles of CO~2~ can be delivered from the environment to the symbiont per mole of fixed carbon. Adjusting this parameter offers the user the opportunity to compare different rates of CO~2~ delivery that may characterize different coral species [@Wooldridge:2014di]. The input of CO~2~ to the photosynthesis SU is therefore specified as:
+We then specify the input of CO~2~ to photosynthesis as $j_{CO_2}$, a flux mediated by the host that encompasses potentially diverse carbon-concentrating mechanisms (CCMs), including active transport of bicarbonate, carbonic anhydrase-catalyzed conversion of bicarbonate to CO~2~ to promote diffusion toward the symbiont [@Tansik:2015cm], and acidification of the symbiosome to increase localized CO~2~ concentrations around the symbiont [@Barott:2014gx]. Since these mechanisms require energetic input by the host, the magnitude of CO~2~ delivery is proportional to the host's excess carbon, $j_{eC}$, assuming that some of this carbon is respired to energize these CCMs. This formulation means that the symbiont indirectly ensures its own CO~2~ supply by providing fixed carbon to the host [@Wooldridge:2013tj], which establishes a positive feedback in the model that leads to the existence of multiple stable states, which we discuss below in the context of coral bleaching. The parameter $k_{CO_2}$ scales the efficacy of host CCMs, which enables the comparison of different rates of CO~2~ delivery that may characterize different coral species [@Wooldridge:2014di]. The input of CO~2~ to the photosynthesis SU is therefore specified as:
 
 \begin{equation} j_{CO_2} = k_{CO_2}j_{eC} \end{equation}
 
@@ -173,7 +173,7 @@ Fixed carbon is then produced by the photosynthesis SU according to:
 
 \begin{equation} j_{CP} = \bigg({1 \over j_{CPm}} + {1 \over {y_{CL} j_L }} + {1 \over {(j_{CO_2} + r_{CH}){H \over S} + r_{CS}}} - {1 \over {y_{CL} j_L + (j_{CO_2} + r_{CH}){H \over S} + r_{CS}}}\bigg)^{-1} \cdot c_{ROS}^{-1} \end{equation}
 
-where $j_{CPm}$ is the maximum specific rate of photosynthesis, and $c_{ROS}$ is the relative rate of reactive oxygen species production (see below). Dividing the photosynthetic rate by $c_{ROS}$ causes a decline in response to photooxidative stress (i.e., photoinhibition).
+where $j_{CPm}$ is the maximum specific rate of photosynthesis, and $c_{ROS}$ is the relative rate of reactive oxygen species production (see below). Dividing the photosynthetic rate by $c_{ROS}$ causes a decline in response to photooxidative stress at high light levels, and the emergent outcome of this SU formulation demonstrates a classic photoinhibition response (see Fig. S1).
 
 Light energy absorbed in excess of what is used to fix carbon is specified by the SU "rejection flux", according to:
 
@@ -183,11 +183,11 @@ This excess light energy must be quenched by alternative pathways in order to pr
 
 \begin{equation} j_{NPQ} = \bigg({1 \over k_{NPQ}} + {1 \over j_{eL}}\bigg)^{-1} \end{equation}
 
-If light energy further exceeds the total capacity of both photochemistry and NPQ, then reactive oxygen species (ROS) are produced. We represent this as a relative quantity $c_{ROS}$, which takes a value of 1 when all light absorbed can be quenched by photochemistry and NPQ, and increases as the amount of excess excitation energy further increases:
+If light energy further exceeds the capacity of both photochemistry and NPQ, then reactive oxygen species (ROS) are produced. We represent this as a relative quantity $c_{ROS}$, taking a value of 1 when all light energy is quenched by photochemistry and NPQ, and increasing as the amount of excess excitation energy increases:
 
 \begin{equation} c_{ROS} = 1 + {{(j_{eL} - j_{NPQ})_+} \over k_{ROS}} \end{equation}
 
-where $k_{NPQ}$ and $k_{ROS}$ are parameters of the symbiont that determine the onset and rate of ROS production. Importantly, $c_{ROS}$ as specified here is not a function of absolute light absorption, but rather the amount of excess light energy, $j_{eL}$, after accounting for carbon fixation and NPQ. A direct consequence of this formulation is that CO~2~-limitation of photosynthesis can lead to ROS production, an important mechanism [@Wooldridge:2009p7807] that was not captured by previous representations of photooxidative stress [@Eynaud:2011tv]. Moreover, this formulation allows functional diversity among symbiont types to be explored by changing the parameters $k_{NPQ}$, $k_{ROS}$, and $k$.
+where $k_{ROS}$ is a parameter of the symbiont that determines the rate of ROS production (specifically, the amount of excess excitation energy that doubles ROS production relative to baseline levels). Importantly, $c_{ROS}$ is specified here not as a function of absolute external light, but rather the amount of excess light, $j_{eL}$, after accounting for quenching by carbon fixation and NPQ. A direct consequence of this formulation is that CO~2~-limitation of photosynthesis can lead to ROS production, an important mechanism [@Wooldridge:2009p7807] that was not captured by previous representations of photooxidative stress [@Eynaud:2011tv].
 
 Carbon fixed by photosynthesis ($j_{CP}$) is then combined with nitrogen shared by the host ($\rho_N$) and nitrogen recycled from symbiont biomass turnover
 
@@ -207,34 +207,33 @@ Symbiont biomass turnover includes a component of constant turnover specified by
 
 \begin{equation} j_{ST} = j_{ST}^0(1 + b(c_{ROS}-1)) \end{equation}
 
-This second component of symbiont biomass loss can represent both photodamage and/or symbiont expulsion (i.e., bleaching), both of which occur in response to high levels of ROS production. The parameter $b$ is included to scale biomass loss due to bleaching in response to ROS. (Note that recycling of symbiont biomass turnover ($rNS$ and $rCS$) only occurs based on the maintenance component of turnover (i.e., $j_{ST}^0$), and not the bleaching-related component, as this loss represents biomass that is damaged or expelled from the host). 
+This second component of symbiont biomass loss represents both photodamage and/or symbiont expulsion (i.e., bleaching), both of which occur in response to high levels of ROS production. The parameter $b$ is included to scale biomass loss due to bleaching in response to ROS. (Note that recycling of symbiont biomass turnover ($rNS$ and $rCS$) only occurs based on the maintenance component of turnover (i.e., $j_{ST}^0$), and not the bleaching-related component, as this loss represents biomass that is damaged or expelled from the host.)
 
 ## Numerical analysis
 
-A time-stepping Euler method was used to solve the state equations since the production and rejection fluxes of the SUs are imiplicitly defined. Specifically, the rejection fluxes of carbon and nitrogen from the symbiont and host biomass SUs act as reciprocal input fluxes to the other SU. In addition, the photosynthesis SU receives CO~2~ proportional to the carbon rejection flux from the host biomass SU, and the rejection flux of excitation energy from the photosynthesis SU acts to reduce its own production (i.e., photoinhibition). A vector of time values was created for each simulation run, along which dynamic environmental forcing functions (irradiance, DIN, and prey abundance) can be designed. These vectors, along with initial values of symbiont and host biomass, then serve as input to the time-stepping function, which solves for the current system state using values of the previous system state where necessary. A time step of 0.1 days was used for all simulations, which were performed using R code that is available in the data repository accompanying this article: [github.com/jrcunning/Rcoral](github.com/jrcunning/Rcoral). 
+A time-stepping Euler method was used to solve the state equations since the production and rejection fluxes of the SUs are imiplicitly defined due to feedbacks present in the model. Specifically, the rejection fluxes of carbon and nitrogen from the symbiont and host biomass SUs act as reciprocal input fluxes to the other SU. In addition, the photosynthesis SU receives CO~2~ proportional to the carbon rejection flux from the host biomass SU, and the rejection flux of excitation energy from the photosynthesis SU acts to reduce its own production (i.e., photoinhibition). A vector of time steps is used for each simulation, along which dynamic environmental forcing functions (irradiance, DIN, and prey abundance) can be designed. These vectors, along with initial values of symbiont and host biomass, then serve as input to the time-stepping function, which solves for the current system state using values of the previous system state where necessary. A time step of 0.1 days was used for all simulations, which were performed using R code that is available in the data repository accompanying this article: [github.com/jrcunning/Rcoral](github.com/jrcunning/Rcoral). 
 
 To aid in visualizing model results, we calculated values to indicate the degree to which product formation at an SU was limited by availability of either of its two substrates:
 
 \begin{equation} \log \bigg({{\min(j_{S1}, j_{Pm})} \over {\min(j_{S2}, j_{Pm})}}\bigg) \end{equation}
 
-where $j_{S1}$ and $j_{S2}$ are the specific input fluxes of the two substrates and $j_{Pm}$ is the maximum specific product formation rate, all with units of Cmol Cmol^-1^ d^-1^.
+where $j_{S1}$ and $j_{S2}$ are the specific input fluxes of the two substrates and $j_{Pm}$ is the maximum specific product formation rate, in units of Cmol Cmol^-1^ d^-1^.
 
 # Results
 ## Qualitative dynamics
-In a constant environment, the system ultimately reaches a steady state of exponential growth or decline. Under some conditions, alternate steady states can be reached depending on initial values of symbiont and host biomass. The mechanism that produces these alternate steady states is the positive feedback between carbon-limitation of the host and CO~2~-limitation of photosynthesis. If the host becomes carbon-limited, the efficacy of its CCMs are reduced and photosynthesis becomes progressively more CO~2~-limited. In turn, less photosynthate is translocated to the host, causing further carbon-limitation and an ultimate decline in biomass; this steady state represents a dysfunctional symbiosis. However, if the host is not carbon-limited, it effectively delivers CO~2~ to photosynthesis and ensures its continued receipt of fixed carbon from the symbiont; this system is nitrogen-limited and represents a functional symbiosis with positive exponential growth. Either of these stable states may be reached under a constant environment depending on the initial values of symbiont and host biomass: if symbiont biomass is initially very low (i.e., a "bleached" coral), the system cannot escape the carbon-limited state and cannot grow. However, if symbiont biomass is initially high (i.e., a healthy coral), then the system maintains positive growth in a nitrogen-limited state. For practical purposes, we consider only positive growth states in the "steady state behavior" section below. In the "dynamic behavior" section, we explore the conditions that cause the system to switch from one state to another, which in a biological context indicates coral bleaching.
+In a constant environment, the system ultimately reaches a steady state of exponential growth or decline. Under some conditions, alternate steady states can be reached depending on initial values of symbiont and host biomass. The mechanism that produces these alternate steady states is the positive feedback between carbon-limitation of the host and CO~2~-limitation of photosynthesis. If the host becomes carbon-limited, the efficacy of its CCMs are reduced and photosynthesis becomes progressively more CO~2~-limited. In turn, less photosynthate is translocated to the host, causing further carbon-limitation and an ultimate decline in biomass; this steady state represents a dysfunctional symbiosis. However, if the host is not carbon-limited, it effectively delivers CO~2~ to photosynthesis and ensures its continued receipt of fixed carbon from the symbiont; this system is nitrogen-limited and represents a functional symbiosis with positive exponential growth. Either of these stable states may be reached under (some sets of) constant environmental conditions, depending on the initial values of symbiont and host biomass: if symbiont biomass is initially very low (i.e., a "bleached" coral), the system cannot escape the carbon-limited state and cannot grow. However, if symbiont biomass is initially high (i.e., a healthy coral), then the system maintains positive growth in a nitrogen-limited state. For practical purposes, we consider only positive growth steady states in the "steady state behavior" section below. In the subsequent "dynamic behavior" section, we explore more thoroughly the conditions that cause the system to switch between alternate stable states, and interpret these dynamics in the context of coral bleaching.
 
 ## Steady state behavior
 
-*emphasize that steady state is exponential growth, and fluxes are per unit biomass/specific rates*
-To analyze qualitative behavior, we ran the model to steady state across gradients of external irradiance and nutrients (Fig. 2), which revealed patterns consistent with observed phenomena in corals. Predicted growth rates are low at low light and DIN, and begin increasing as both of these factors increase (Fig. 2A). Low light is limiting to photosynthesis (Fig. 2D), which leads to carbon-limitation of host growth (Fig. 2B) and an associated increase in the symbiont to host biomass ratio (Fig. 2C). In agreement with this trend are many observations of negative correlation between irradiance and symbiont density [@Stimson:1997p3837; @Brown:1999p3534; @Fitt:2000p3792; @Titlyanov:2001p3631]. As higher light alleviates light-limitation of photosynthesis, growth becomes less carbon-limited. Similarly, elevating DIN up to ~2 µM alleviates nitrogen-limitation (Fig. 2B). Increased growth at higher DIN is predicted by the DEB model of @Muller:2009io, and has also been observed experimentally [@MullerParker:1994uo; @Tanaka:2007uv; @Tanaka:2013dj]. However, DIN elevation beyond a certain point (e.g., 2-3 µM in these simulations) has little effect on growth as carbon becomes limiting (Fig. 2B). Very high nutrient levels may even reduce growth [@Shantz:2015dz], although these impacts are not likely to occur within the range of concentrations considered here (<4 µM) [@FerrierPages:2000p1950]. 
+To analyze qualitative behavior, we ran the model to steady state across gradients of external irradiance and nutrients (Fig. 2), which revealed patterns consistent with observed phenomena in corals. Predicted growth rates are low at low light and DIN (~0.01 d^-1^), and begin increasing as both of these factors increase (Fig. 2A). Low light is limiting to photosynthesis (Fig. 2D), which leads to carbon-limitation of host growth (Fig. 2B) and an associated increase in the symbiont to host biomass ratio (Fig. 2C). In agreement with this trend are many observations of negative correlation between irradiance and symbiont density [@Stimson:1997p3837; @Brown:1999p3534; @Fitt:2000p3792; @Titlyanov:2001p3631]. As higher light alleviates light-limitation of photosynthesis, growth becomes less carbon-limited. Similarly, elevating DIN up to ~2 µM alleviates nitrogen-limitation (Fig. 2B). Increased growth at higher DIN is predicted by the DEB model of @Muller:2009io, and has also been observed experimentally [@MullerParker:1994uo; @Tanaka:2007uv; @Tanaka:2013dj]. However, DIN elevation beyond a certain point (e.g., ~3-4 µM in these simulations) has little effect on growth as carbon becomes limiting (Fig. 2B). Very high nutrient levels may even reduce growth [@Shantz:2015dz], although these impacts are not likely to occur within the range of concentrations considered here (<4 µM) [@FerrierPages:2000p1950]. 
 
 In addition to increasing growth, DIN also increases the symbiont to host biomass ratio, a phenomenon also observed in reef corals [@Marubini:1996p8460]. S:H ratios also increase under low light [@Stimson:1997p3837; @Fitt:2000p3792; @Anthony:2003p3632]. At low DIN and intermediate light, more typical of coral reef environments, symbiont to host biomass ratios are around ~0.1-0.3, which is consistent with values reported in the literature [@Muscatine:1981jy; @Edmunds:2011bv].
 
 ![Steady state values of **A)** specific growth (Cmol Cmol^-1^ d^-1^), **B)** the symbiont to host biomass ratio (CmolS CmolH^-1^), **C)** relative C- or N-limitation of host biomass formation, and **D)** relative CO~2~- or light-limitation of symbiont photosynthesis, across gradients of external irradiance and dissolved inorganic nitrogen. Note that typical conditions for reefs are ~1e-7 M DIN and 10-20 mol photons m^-2^ d^-1^. Simulations for each combination of light and nutrients (41 points along each axis) were run for 100 days with a time step of 1 day. Negative steady state growth rates, and corresponding S:H ratios, were set to zero.](../img/Fig2.png)
 
-The maximum predicted growth rates of ~0.1 d^-1^, occurring between ~10-15 mol photons m^-2^ s^-1^ light and >~3 µM DIN (Fig. 2A), are comparable to the rate of `r Tanaka_gr` d^-1^ measured by @Tanaka:2007uv under similar N-enriched conditions. Growth under conditions more typical of reef environments (<0.5 µM DIN) are within the range of ~0.01-0.05 d^-1^; however, these values are still higher than most specific growth rates reported in the literature, which are typically based on skeletal mass, and fall near or below 0.01 d^-1^ [@Osinga:2011kq; @Osinga:2012is] (though values as high as 0.025 d^-1^ have been reported [@Schutter:2010p7758]). These generally low skeletal growth rates relative to predicted biomass growth may be explained by differential substrate-limitation (i.e., CO~2~ may limit calcification, which is not present in the model); indeed, tissue and skeletal growth may not always be well correlated [@Anthony:2002tc]. Furthermore, bioerosion may reduce net skeletal growth, especially in the field [@Bak:1976bv]. Nevertheless, when rates of increase in coral tissue biomass have been directly measured over short periods, values are consistent with model predictions (e.g., `r Tanaka_gr` d^-1^ in @Tanaka:2007uv), and similar rates (`r Armoza_gr` d^-1^) have been measured in *Aiptasia diaphana*, a non-calcifying symbiotic anemone [@ArmozaZvuloni:2014ju].
+The maximum predicted growth rates of ~0.1 d^-1^, occurring between ~10-20 mol photons m^-2^ s^-1^ light and ~4 µM DIN (Fig. 2A), are comparable to the rate of `r Tanaka_gr` d^-1^ measured by @Tanaka:2007uv under similar N-enriched conditions. Growth under conditions more typical of reef environments (<0.5 µM DIN) are within the range of ~0.01-0.03 d^-1^; these values are slightly higher than most specific growth rates reported in the literature, which are typically based on skeletal mass, and fall near or below 0.01 d^-1^ [@Osinga:2011kq; @Osinga:2012is] (though values as high as 0.025 d^-1^ have been reported [@Schutter:2010p7758]). These generally low skeletal growth rates relative to predicted biomass growth may be explained by differential substrate-limitation (i.e., CO~2~ may limit calcification, which is not present in the model); indeed, tissue and skeletal growth may not always be well correlated [@Anthony:2002tc]. Furthermore, bioerosion may reduce net skeletal growth, especially in the field [@Bak:1976bv]. Nevertheless, when rates of increase in coral tissue biomass have been directly measured over short periods, values are consistent with model predictions (e.g., `r Tanaka_gr` d^-1^ in @Tanaka:2007uv), and similar rates (`r Armoza_gr` d^-1^) have been measured in *Aiptasia diaphana*, a non-calcifying symbiotic anemone [@ArmozaZvuloni:2014ju].
 
-As irradiance continues to increase above ~15-20 mol photons m^-2^ d^-1^, growth rates decline until positive growth ceases above ~30 µmol photons m^-2^ d^-1^. The mechanism underlying this decline is the increase in light energy beyond the capacity of photosynthesis and non-photochemical quenching: excess excitation energy generates reactive oxygen species (ROS) [@Weis:2008p944; @Roth:2014wf], which, in this model, have the phenomenological consequences of reducing the photosynthetic rate (representing photoinhibition) and increasing the symbiont biomass loss rate (representing photodamage and/or symbiont expulsion) [see @Eynaud:2011tv]. Together, these impacts reduce the symbiont to host biomass ratio (Fig. 2C), as occurs during coral bleaching. This reduction in symbionts consequently reduces the flux of fixed carbon to the host, resulting in increasing carbon-limitation (Fig. 2B) and eventual cessation of growth (Fig. 2A). Importantly, these consequences arise in the present model only when light energy exceeds the capacity of photochemistry and NPQ, which in turn depends on CO~2~ availability. While previous models framed photophysiological stress as a fixed response to absolute irradiance levels [@Eynaud:2011tv], the current implementation considers the dynamic balance of multiple energy sinks in the causation of stress, which is more consistent with current understanding of symbiosis dysfunction [@Wooldridge:2013tj], and establishes an important role of the host in providing CO~2~ for symbiont photosynthesis [@Tansik:2015cm; @Hopkinson:2015ev].
+As irradiance continues to increase above ~20 mol photons m^-2^ d^-1^, growth rates decline until positive growth ceases above ~35 µmol photons m^-2^ d^-1^. The mechanism underlying this decline is the increase in light energy beyond the capacity of photosynthesis and non-photochemical quenching: excess excitation energy generates reactive oxygen species (ROS) [@Weis:2008p944; @Roth:2014wf], which, in this model, have the phenomenological consequences of reducing the photosynthetic rate (representing photoinhibition) and increasing symbiont biomass loss (representing photodamage and/or symbiont expulsion) [see @Eynaud:2011tv]. Together, these impacts reduce the symbiont to host biomass ratio (Fig. 2C), as occurs during coral bleaching. This reduction in symbionts consequently reduces the flux of fixed carbon to the host, resulting in increasing carbon-limitation (Fig. 2B) and eventual cessation of growth (Fig. 2A). Importantly, these consequences arise in the present model only when light energy exceeds the capacity of photochemistry and NPQ, which in turn depends on CO~2~ availability. While previous models framed photophysiological stress as a fixed response to absolute irradiance levels [@Eynaud:2011tv], the current implementation considers the dynamic balance of multiple energy sinks in the causation of stress, which is more consistent with current understanding of symbiosis dysfunction [@Wooldridge:2013tj], and establishes an important role of the host in providing CO~2~ for symbiont photosynthesis [@Tansik:2015cm; @Hopkinson:2015ev].
 
 While bleaching in response to high light alone has been observed experimentally [@Schutter:2011ie; @Downs:2013kc], mass coral bleaching events occur in response to high temperature [@HoeghGuldberg:1999p4222]; thus, it is important to justify our consideration of light as the primary stressor in the model. In reality, light and temperature interact synergistically [@Coles:1978p1124; @Jones:1998p3572], and in fact, any stressor that disrupts the quenching of light energy may lead to bleaching [@Wooldridge:2010p7809; @Baker:2015kp]. This is because the proximate cause of coral bleaching is excess excitation energy, but the upstream events that lead to this situation may be diverse: indeed, elevated temperature inhibits Rubisco functioning [@Jones:1998p3572] and repair of the D1 protein in photosystem II [@Warner:1999p4239], which reduces the capacity of photochemical quenching and leads to an excess of light energy. In this way, elevated temperature serves to reduce the threshold above which light causes stress to the system [@HoeghGuldberg:1999p4222]; importantly, light is still the proximate stressor. Therefore, we omitted temperature from the model, which serves to maintain a desired level of simplicity, while still allowing photophysiological stress and bleaching to be simulated with biological realism in response to light. Thus, the specific light levels that cause stress here should be interpreted in this context, and the effects of high light are analagous to the effects of high temperature.
 
